--- a/TabelaWasi.html
+++ b/TabelaWasi.html
@@ -6,7 +6,7 @@
 <title> poczta Wasilewska </title>
 </head>
 <body>
-<A href ="mailto:Wasilewska@edu.gda.pl"><img src="C:\Users\kasia\Desktop/tabela.jpg" border=0 width=70 height=70>tabela </A>
+<A href ="mailto:Wasilewska@edu.gda.pl"><img src="https://cdn2.iconfinder.com/data/icons/zoldo-miscellaneous-015/64/table_cells_spreadsheet-512.png" border=0 width=70 height=70>tabela </A>
 <br>
 <A HREF="index.html">Wróć</A> 
 </body>
