--- a/TabelaWasi.html
+++ b/TabelaWasi.html
@@ -3,11 +3,10 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> poczta Wasilewska </title>
+<title> poczta Wasilewska </title> <br>
 </head>
 <body>
-<A href ="mailto:Wasilewska@edu.gda.pl"><img src="https://cdn2.iconfinder.com/data/icons/zoldo-miscellaneous-015/64/table_cells_spreadsheet-512.png" border=0 width=70 height=70>tabela </A>
-<br>
+<A href ="mailto:Wasilewska@edu.gda.pl"><img src="https://cdn2.iconfinder.com/data/icons/zoldo-miscellaneous-015/64/table_cells_spreadsheet-512.png" border=0 width=70 height=70>tabela </A> <br>
 <A HREF="index.html">Wróć</A> 
 </body>
 </html>
