--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 <A href ="mailto:Wasilewska@edu.gda.pl"><img src="https://cdn-icons-png.freepik.com/512/178/178916.png" border=0 width=70 height=70>tabela </A>
 <br>
-<A HREF="index.html">Wróć</A> 
+<a href="https://kasia270.github.io/pierwszy-sprawdzian/" target="_blank">wróć</a>
 </body>
 </html>
 
