--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title> poczta Wasilewska </title>
+<title> tabela Wasilewska </title>
 </head>
 <body>
 <A href ="mailto:Wasilewska@edu.gda.pl"><img src="https://cdn-icons-png.freepik.com/512/178/178916.png" border=0 width=70 height=70>tabela </A>
